# python-fact_inventory

./: .dockerignore  .env.testing  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  TODO.md  alembic.ini  gather_facts.yml  pyproject.toml
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 47f1bb8ab1df_initial_schema.py
app/: __init__.py  app_factory.py  cleanup.py  constants.py  main.py  routes.py  settings.py  validate_ip.py
app/fact_inventory/: README.md  __init__.py  constants.py  retention.py  routes.py  unversioned_routes.py  versioned_routes.py
app/fact_inventory/plugins/: __init__.py  cleanup.py
app/fact_inventory/schemas/: __init__.py
app/fact_inventory/schemas/hostfacts/: __init__.py  apis.py  models.py  repositories.py
app/fact_inventory/unversioned/: __init__.py  health.py  ready.py  routes.py
app/fact_inventory/v1/: controller.py  health_controller.py  services.py
app/schemas/: __init__.py  apis.py  models.py  repositories.py
app/unversioned/: __init__.py  health.py  ready.py  responses.py
app/v1/: __init__.py  controller.py  responses.py  router.py  services.py
docs/: ALEMBIC.md  DEPLOYMENT.md  DESIGN.md  DEVELOPMENT.md  PARTITIONING.md  README.md  RETENTION.md  TODO.md  VIEWS.md
fact_inventory/: __init__.py  app_factory.py  main.py
fact_inventory/application/: exceptions.py  services.py
fact_inventory/config/: background.py  logging.py  otel.py  settings.py
fact_inventory/domain/: constraints.py  retention.py
fact_inventory/infrastructure/db/: models.py  repositories.py
fact_inventory/presentation/api/: router.py
fact_inventory/presentation/api/unversioned/: health.py  ready.py
fact_inventory/presentation/api/v1/: controller.py  router.py
fact_inventory/presentation/api/v1/schemas/: apis.py  responses.py
sample_data/: gather_facts.yml  script.sh  test_bad_fields.json  test_bad_json.json  test_good_simple.json
tests/: back.py  conftest.py  test_cleanup_plugin.py  test_health.py  test_metrics.py  test_purge.py  test_ready.py  test_retention.py  test_routes.py  test_settings.py
tests/test_application/: test_services.py
tests/test_config/: test_background.py  test_logging.py  test_otel.py  test_settings.py
tests/test_domain/: test_constraints.py  test_retention.py
tests/test_infrastructure/test_db/: test_repositories.py
tests/test_integration/: test_app.py
tests/test_presentation/test_api/test_unversioned/: test_health.py  test_metrics.py  test_ready.py
tests/test_presentation/test_api/test_v1/: test_controller.py
tests/v1/: test_controller.py  test_health_controller.py
