[project]
name = "fact-inventory"
version = "0.0.1"
license = "GPL 3+"
description = "Store facts about a system in a database"
readme = "docs/README.md"
requires-python = ">=3.12"
dependencies = [
  "advanced-alchemy>=1.9.3",
  "litestar[standard,sqlalchemy,prometheus,opentelemetry]>=2.21.1",
  "pydantic>=2.13.0",
  "pydantic-settings>=2.13.1",
  "sqlalchemy[aiosqlite,postgresql-asyncpg]>=2.0.49",
  "structlog>=25.5.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "mypy>=1.20.0",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.15.9",
  "sphinx>=7.0.0",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
disable_bytearray_promotion = true
disable_memoryview_promotion = true
files = "fact_inventory"
ignore_missing_imports = true
show_error_codes = true
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
addopts = "--cov"

[tool.coverage.run]
source = ["fact_inventory"]
branch = true
omit = ["fact_inventory/__main__.py", "fact_inventory/main.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
  "if __name__ == .__main__.:",
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]

[tool.ruff]
fix = true
src = ["fact_inventory", "tests"]

[tool.ruff.lint]
extend-select = [
  "A",     # detect shadowed builtins
  "ARG",   # unused-arguments
  "ASYNC", # async
  "B",     # flake8-bugbear
  "C4",    # Catch incorrect use of comprehensions, dict, list, etc
  "COM",   # enforce trailing comma rules
  "DTZ",   # require strict timezone manipulation with datetime
  "E",     # PyCodeStyle errors
  "F",     # Pyflakes rules
  "FA",    # Verifies files use from __future__ import annotations if a type is used in the module that can be rewritten using PEP 563.
  "FBT",   # detect boolean traps
  "G",     # Better usage of built-in logging
  "I",     # isort - Import sorting
  "ICN",   # Use common import conventions
  "ISC",   # Good use of string concatenation
  "LOG",   # Checks for issues using the standard library logging module.
  "N",     # enforce naming conventions, e.g. ClassName vs function_name
  "PL",    # pylint
  "PTH",   # Use pathlib instead of os.path
  "PYI",   # Linting rules for type annotations.
  "Q",     # Linting rules for quotes
  "RET",   # Good return practices
  "RUF",   # Ruff specific lint rules
  "S",     # bandit
  "SIM",   # flake8-simplify
  "TC",    # Enforce importing certain types in a TYPE_CHECKING block
  "TCH",   # Move type only imports to type-checking condition.
  "TID",   # Helps you write tidier imports.
  "TRY",   # tryceratops - track exception handling
  "UP",    # pyupgrade - Warn if certain things can changed due to newer Python versions
  "W"      # PyCodeStyle warnings
]
ignore = [
  "COM812", # de-dupe trailing commas
  "SIM108", # ternary is ugly
  "S110",   # try-except-pass - silent exception handling is intentional in background jobs
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "ARG002",  # sometimes args are fixtures not variables
  "E501",    # line too long -- test readability trumps line length
  "S101",    # test cases use assert
  "PLR2004", # magic values -- expected counts are intentional literals in tests
  "PLC0415", # imports not at top level -- fixture-scoped imports are intentional
]
